# depth_normals

./: CMakeLists.txt  README.md  cas.rdc  depth_normals.vcxproj
data/: sphere.ply  table.ply  trailer.ply
data/custom/ground_truth/: cube.ply  pallets_asset.ply  plane.ply  plane_intense_normals.ply  sign.ply
data/custom/no_normals/: cube_no_normals.ply  pallets_asset.ply  plane_intense_no_normals.ply  plane_no_normals.ply  sign_no_normals.ply  test.ply  test_ascii_sphere.ply  test_binary_sphere.ply
data/ipsr_data/: boogie.ply  bunny_sparse_test.ply  object.ply  object_no_normals.ply  sphere_no_normals.ply
poisson/: GPU_PoissonRecon.exp
src/: App.cpp  App.h  Camera.cpp  Camera.h  PLY_loader.cpp  PLY_loader.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TODO.txt  main.cpp
src/shaders/: average_normal.comp  biggerSplat_pass.frag  biggerSplat_pass.vert  calc_normal.comp  calc_normal.frag  calc_normal.vert  debug_shader.frag  depth_pass.frag  depth_pass.vert  draw_AABB.frag  draw_AABB.vert  draw_frustum.frag  draw_lines.frag  draw_lines.geom  draw_lines.vert  draw_points.frag  draw_points.vert  normal_pass.frag  normal_pass.vert  triangle_test.frag  triangle_test.vert  visualize_normal.frag  visualize_normal.vert
src/shaders/debug/: Text.txt  debug_id_tex.frag  debug_id_tex.vert  debug_normal_tex.frag  debug_normal_tex.vert  exCalc.txt
